--- a/Meow_web/todos/templates/todos/add.html
+++ b/Meow_web/todos/templates/todos/add.html
@@ -5,7 +5,8 @@ Add Todos
 
 {% block body %}
 	<h1>Add Todo</h1>
-		<form>
+		<form action="{% url 'todos:add' %}" method="post">
+			{% csrf_token %}
 			<input type="text" name="task">
 			<input type="submit">
 		</form>
